--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server server.json -p 3333"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -18,6 +20,7 @@
     "@types/react-dom": "^17.0.10",
     "@types/react-redux": "^7.1.22",
     "@vitejs/plugin-react": "^1.0.7",
+    "json-server": "^0.17.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   }
